# aomodel_public

./: .gitignore  README.rst  environment.yml  pyproject.toml
aomodel/: __init__.py  _indexing.py  estimation.py  long_range_ar.py  metrics.py  pca.py  prediction_window_structure.py  revar.py  utils.py
demo/: demo_1_data_generation.py  demo_2_parameter_estimation.py  demo_utils.py  get_demo_data_server.sh
dev_scripts/: build_docs.sh  clean_install_all.sh
docs/: README.rst
docs/_templates/: class_template.rst  module_template.rst
docs/source/: advanced_features.rst  api.rst  api_overview.rst  conf.py  demo.rst  demo_data_downloading.rst  demo_utilities.rst  estimation.rst  index.rst  install.rst  long_range_ar.rst  metrics.rst  pca.rst  prediction_window_structure.rst  references.rst  refs.bib  revar.rst  theory.rst  utils.rst
